improv: Move SSJ arg for security manager to separate variable, SSJ_ARGS, in variables