@@ -238,7 +238,7 @@ setupForge() {
         runJavaCommand "-jar forge-installer.jar --installServer"
       fi
     else
-      SERVER_RUN_COMMAND="@user_jvm_args.txt -Djava.security.manager=allow -jar server.jar --installer-force --installer ${FORGE_INSTALLER_URL} nogui"
+      SERVER_RUN_COMMAND="@user_jvm_args.txt ${SSJ_ARGS} -jar server.jar --installer-force --installer ${FORGE_INSTALLER_URL} nogui"
       # Download ServerStarterJar to server.jar
       refreshServerJar
     fi
@@ -563,6 +563,7 @@ echo "Fabric Installer Version:       ${FABRIC_INSTALLER_VERSION}"
 echo "Quilt Installer Version:        ${QUILT_INSTALLER_VERSION}"
 echo "Java Args:                      ${JAVA_ARGS}"
 echo "Additional Args:                ${ADDITIONAL_ARGS}"
+echo "SSJ Args:                       ${SSJ_ARGS}"
 echo "Java Path:                      ${JAVA}"
 echo "Wait For User Input:            ${WAIT_FOR_USER_INPUT}"
 if [[ "${LAUNCHER_JAR_LOCATION}" != "do_not_manually_edit" ]];then
